--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
 	"postinstall": "prisma generate",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
+	"build": "prisma migrate deploy && next build --turbopack",
+	"dev": "next dev --turbopack",
+	"start": "next start",
+	"lint": "eslint"
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
